[package]
name = "may-todos"
version = "0.1.0"
edition = "2021"

[dependencies]
atoi = "2"
buf-min = { version = "0.7", features = ["bytes"] }
matchit = { version = "0.8.0", default-features = false }
may = { version = "0.3", default-features = false }
may_minihttp = { version = "0.1.0", default-features = false }
may_postgres = { git = "https://github.com/Xudong-Huang/may_postgres.git", rev = "bf1d86e", default-features = false }
mimalloc = { version = "0.1", default-features = false }
num_cpus = "1.0"
serde_json = "1.0.114"
smallvec = "1.1"
yarte = { version = "0.15", features = ["bytes-buf", "json"] }

[profile.release]
opt-level = 3
codegen-units = 1
panic = 'abort'
lto = 'thin'
debug = false
incremental = false
overflow-checks = false
